<resources>
    <string name="app_name">LAK升旗仪式模拟器</string>
    <string name="title_00">升</string>
    <string name="title_01">旗</string>
    <string name="title_02">仪式模拟器</string>
    <string name="author">作者：wfrfred</string>
    <string name="acknowledgement_00">特别鸣谢:\n皮皮卡丘桑&amp;超威蓝猫_吗&amp;Y^3</string>
    <string name="acknowledgement_01">LAK</string>
    <string name="acknowledgement_02">提供的素材与思路</string>
    <string name="acknowledgement_03">以及鸽子提供的图标</string>
    <string name="title_activity_settings">SettingsActivity</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
    <string name="title_activity_prepare">PrepareActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
</resources>